chore: add initial project configuration files
- Added .env.example with database, Redis, and application configuration settings
- Added ESLint configuration with TypeScript and Prettier integration
- Created .gitignore file with comprehensive rules for Node.js projects
- Added Prettier configuration for consistent code formatting
- Created CHANGELOG.md to track version history and features
- Added MIT license file
- Created PROJECT_OVERVIEW.md with detailed architecture and implementation docs

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@rohit-patil/db-core",
+  "name": "@rohit_patil/db-core",
   "version": "1.0.0",
   "description": "Core database layer with PostgreSQL and Redis caching for microservices",
   "main": "dist/index.js",
