chore: add public npm publish script
- Added "publish" script to package.json to explicitly set public access when publishing
- Ensures package will be published publicly on npm registry without access restrictions

--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "prepublishOnly": "npm run build",
     "migrate:up": "node dist/cli/migrate.js up",
     "migrate:down": "node dist/cli/migrate.js down",
-    "migrate:create": "node dist/cli/migrate.js create"
+    "migrate:create": "node dist/cli/migrate.js create",
+    "publish": "npm publish --access public"
   },
   "keywords": [
     "database",
