feat: add database read replica support with load balancing
- Added configuration support for multiple database read replicas in .env.example
- Created new getDatabaseConfigWithReplicas function to parse replica configurations
- Introduced ReadReplicaConfig and DatabaseConfigWithReplicas types for replica management
- Added configurable load balancing strategies (round-robin, weighted, random)
- Exported ReplicaManager and new config types in main index.ts
- Added SSL configuration option for both primary

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-# Database Configuration
+# Database Configuration (Primary/Write)
 DB_HOST=localhost
 DB_PORT=5432
 DB_NAME=your_database
@@ -8,6 +8,33 @@ DB_POOL_MIN=2
 DB_POOL_MAX=10
 DB_IDLE_TIMEOUT_MS=30000
 DB_CONNECTION_TIMEOUT_MS=5000
+DB_SSL=false
+
+# Read Replica Configuration (Optional - for horizontal scaling)
+# Read Replica 1
+DB_READ_REPLICA_1_HOST=replica-1.example.com
+DB_READ_REPLICA_1_PORT=5432
+DB_READ_REPLICA_1_DATABASE=your_database
+DB_READ_REPLICA_1_USER=postgres
+DB_READ_REPLICA_1_PASSWORD=your_password
+DB_READ_REPLICA_1_POOL_MAX=15
+DB_READ_REPLICA_1_POOL_MIN=2
+DB_READ_REPLICA_1_SSL=false
+DB_READ_REPLICA_1_WEIGHT=1
+
+# Read Replica 2 (Add more as needed)
+# DB_READ_REPLICA_2_HOST=replica-2.example.com
+# DB_READ_REPLICA_2_PORT=5432
+# DB_READ_REPLICA_2_DATABASE=your_database
+# DB_READ_REPLICA_2_USER=postgres
+# DB_READ_REPLICA_2_PASSWORD=your_password
+# DB_READ_REPLICA_2_POOL_MAX=15
+# DB_READ_REPLICA_2_POOL_MIN=2
+# DB_READ_REPLICA_2_SSL=false
+# DB_READ_REPLICA_2_WEIGHT=1
+
+# Load Balancing Strategy (round-robin, weighted, random)
+DB_LOAD_BALANCING=round-robin
 
 # Redis Configuration
 REDIS_HOST=localhost
